Fix: Finally fix the z-index bug

--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,7 @@
       #898989 97.63%
     );
   }
+  .fix-canvas-bug {
+    z-index: 1 !important;
+  }
 }
